RbA Build/src/objects/Store_Finance_Program__c.object
<CustomObject>
    <description>Junction object to link a Store to a Finance Program</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bridge_Loan_Type__c</fullName>
        <label>Bridge Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIWP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Payment_Options__c</fullName>
        <description>Payment options for customer self financing</description>
        <inlineHelpText>Select the Payment options for customer self financing</inlineHelpText>
        <label>Cash Payment Options</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Debit Card - Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card/Debit - Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card/Debit - MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>% Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The finance company&apos;s account record.</description>
        <inlineHelpText>The finance company&apos;s account record.</inlineHelpText>
        <label>Finance Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Finance Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Finance Programs</relationshipLabel>
        <relationshipName>Store_Finance_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Option_Order__c</fullName>
        <label>Option Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Factor__c</fullName>
        <label>Payment Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Due_at_Signing__c</fullName>
        <label>Percent Due at Signing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Number__c</fullName>
        <description>The plan number pulled from the Finance Program (using workflow)</description>
        <inlineHelpText>The plan number pulled from the Finance Program</inlineHelpText>
        <label>Plan Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price &gt;=</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Fee__c</fullName>
        <description>The program fee associated with this plan. This is a percent of the total sold.</description>
        <inlineHelpText>The program fee associated with this plan. This is a percent of the total sold.</inlineHelpText>
        <label>Program Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked then this program will be an option if you selected &quot;No&quot; to combining the volume discount and tiered financing</description>
        <inlineHelpText>Check this box if you want; this option to be a standard financing option.</inlineHelpText>
        <label>Standard Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Store Finance Programs</relationshipLabel>
        <relationshipName>Store_Finance_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Period_Type__c</fullName>
        <label>Time Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units &gt;=</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSuite_Financing_Option__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>rSuite Financing Option that this Store Finance Program belongs to</description>
        <inlineHelpText>Select the rSuite Financing Option</inlineHelpText>
        <label>rSuite Financing Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Store_Configuration__c</field>
                <operation>equals</operation>
                <valueField>rSuite_Financing_Option__c.Store_Configuration__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rSuite_Financing_Option__c</referenceTo>
        <relationshipLabel>Store Finance Programs</relationshipLabel>
        <relationshipName>Store_Finance_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Store Finance Program</label>
    <nameField>
        <label>Store Finance Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Finance Programs</pluralLabel>
    <recordTypes>
        <fullName>Bridge_Loan</fullName>
        <active>true</active>
        <label>Bridge Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cash_Payment</fullName>
        <active>true</active>
        <label>Cash Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installment_Loan</fullName>
        <active>true</active>
        <label>Installment Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy</fullName>
        <active>true</active>
        <description>Store Finance Programs converted from Pivotal</description>
        <label>Legacy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>